# web_m5_Currency_app

./: README.md  app.py  exchange_data.json  file.json  pyproject.toml  test.py
MainPart/: main.py
WebSockets/: functions.py  logging.txt  producer.py  server.py
